# clawkeeper

./: .gitignore  LICENSE  README.md  key-info.json  model_spec.json  pyproject.toml
benchmarks/: run_benchmark.py
data/: HOMEWORK-NOTES.md  all_historical_prs.json  bootstrap_sample.jsonl  dedupe_ground_truth_enriched.json  enriched_sample.jsonl  historical_prs.json  historical_prs_created.json  historical_prs_full.json  open_issues.json  open_prs.json  split.json
docs/: bootstrap-v1-findings.md  closure-taxonomy.md  dedupe-ground-truth.md  ideas.md  model-spec-notes.md
examples/: config_example.yaml  openclaw_report.md
features/: feature_map.json
plans/: CTR-BOOTSTRAP-V2-SCRIPTS.md  bootstrap-v2-plan.md
reports/: D-1-data-snapshot.md  D-1v2-enriched-analysis.md  D01v3-enrichment-analysis.md  S05-model-specification.md  S07-bootstrap-sequential-full.md  S07-bootstrap-sequential.md  TEMPLATE.md  bootstrap-v2.1-report.md  bootstrap-v3-report.md
scripts/: analyze_error_features_v4b.py  bootstrap_round.py  bootstrap_v2.py  bootstrap_v3.py  bootstrap_v4.py  bootstrap_v4a_prior_only.py  bootstrap_v4b_feature_discovery.py  build_split.py  consolidate_bootstrap.py  consolidate_v2.py  enrich_ground_truth.py  enrichment_v2.py  extract_patterns.py  extract_patterns_posthoc_v4a.py  extract_patterns_v3.py  extract_patterns_v4.py  filter_population.py  post_training_clt.py  run_bootstrap_only.sh  run_pipeline.sh  sample_v2.py  sanitize.py  score_round.py  stratified_sample.py
src/: __init__.py  cli.py
tests/: test_benchmark.py  test_bootstrap.py  test_categorizer.py  (+9 more)
(+140 files in other folders)
