[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawkeeper"
version = "0.1.0"
description = "Governance engine for OpenClaw pull requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # TODO: add runtime dependencies
]

[tool.pytest.ini_options]
testpaths = ["tests"]
